# dossier

./: .gitignore  Dockerfile  LICENSE  README.md  ai_market_research_data.json  mcp_server.py  pyproject.toml
examples/: ai_market_report.json  example_input.json
report_engine/: __init__.py  cli.py  mcp_tool.py  renderer.py  research.py  schema.py  selector.py
report_engine/sections/: __init__.py  appendix.py  competitive_landscape.py  cover_page.py  data_tables.py  executive_summary.py  key_metrics.py  market_overview.py  recommendations.py  swot_analysis.py  trend_analysis.py
report_engine/sections/templates/: appendix.html.j2  competitive_landscape.html.j2  cover_page.html.j2  data_tables.html.j2  executive_summary.html.j2  key_metrics.html.j2  market_overview.html.j2  recommendations.html.j2  swot_analysis.html.j2  trend_analysis.html.j2
report_engine/styles/: report.css  report_compat.css
tests/: test_renderer.py  test_research.py  test_selector.py
